--- a/addons/templates/pjsip_trunk_ogw.tmpl
+++ b/addons/templates/pjsip_trunk_ogw.tmpl
@@ -26,7 +26,7 @@ match = ##IPADDR##
 [##TRUNKNAME##]
 type = registration
 transport = transport-udp
-outbound_auth = hikari-hgw##NUM##
+outbound_auth = hikari-ogw##NUM##
 server_uri = sip:##IPADDR##
 client_uri = sip:##USERNAME##@##IPADDR##
 retry_interval = 60
