--- a/exten/pjsip_trunk_hikari-rtx.conf.tmpl
+++ b/exten/pjsip_trunk_hikari-rtx.conf.tmpl
@@ -65,6 +65,7 @@ force_rport = no
 rewrite_contact = no
 direct_media = no
 send_pai = yes
+tos_audio = 0xb8
 from_user = ###自局番号を書く###
 from_domain = ###SIPドメインを書く###
 aors = hikari-rtx
